# redis8

./: .gitignore  00-RELEASENOTES  CMakeLists.txt  read-record.md
.github/workflows/: ci.yml  codecov.yml  daily.yml  external.yml  redis_docs_sync.yaml  reply-schemas-linter.yml
example/: CMakeLists.txt  Makefile  epoll_client.c  epoll_data_server.c  epoll_server.c  fenwick_tree.c  getaddrinfo.c  hiredis_append_command.c  hiredis_connection.c  kqueue_client.c  kqueue_filesystem.c  kqueue_server.c  poll_client.c  poll_server.c  rax-test.c  select_client.c  select_server.c  socket_client.c  socket_server.c  test_adlist.c  test_base.c  test_common.h  test_cond  test_cond.c  test_dict.c  test_internal.c  test_listpack.c  test_listpack_internal.c  test_madvise.c  test_pipe.c  test_quicklist.c  test_sds.c  test_t_zset.c
src/: CMakeLists.txt  Makefile  acl.c  adlist.c  ae.c  ae.h  ae_epoll.c  ae_kqueue.c  anet.c  bio.c  cluster.h  config.c  connection.c  connection.h  connhelpers.h  crcspeed.c  db.c  debug.c  debugmacro.h  dict.c  dict.h  endianconv.h  eventnotifier.c  expire.c  functions.c  intset.c  intset.h  iothread.c  kvstore.c  kvstore.h  listpack.c  mkreleasehdr.sh  module.c  mstr.c  mstr.h  networking.c  object.c  quicklist.c  quicklist.h  rax.c  (+21 more)
tests/example/c/: Makefile  test_adlist.c  test_dict.c  test_sds.c
tests/unit/: memefficiency.tcl
